deploy: 326484880bf270378b99b3db8ca28436b7862339

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ https://prismjs.com/download.html#themes=prism&languages=markup+css */
 
     </style>
     <link href="https://cdn.jsdelivr.net/npm/decilitre@/dist/decilitre.min.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/decilitre@/dist/utilities.min.css" rel="stylesheet" />}
+    <link href="https://cdn.jsdelivr.net/npm/decilitre@/dist/utilities.min.css" rel="stylesheet" />
 
   </head>
 
