deploy: 7c2f6f956ae5622ecf7afbacf89d41ce8b74494b

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -115,8 +116,8 @@ https://prismjs.com/download.html#themes=prism&languages=markup+css */
 }
 
     </style>
-    <link href="https://cdn.jsdelivr.net/npm/decilitre@/dist/decilitre.min.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/decilitre@/dist/utilities.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/decilitre@0.6.2/dist/decilitre.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/decilitre@0.6.2/dist/utilities.min.css" rel="stylesheet" />
 
   </head>
 
